# generator

./: .dockerignore  .env.example  .flashignore  .gitignore  =11.0.0  Dockerfile.serverless  README.md  brainstorm_plan.md  pyproject.toml  requirements.serverless.txt
.github/workflows/: ci.yml  serverless-release.yml
.runpod/: resources.pkl
anime_lora_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: __init__.py  db.py  main.py  models.py  schemas.py  settings.py
app/services/: dataset.py  gemini.py  orchestration.py  runpod.py  utils.py
app/static/: app.css
app/templates/: base.html  index.html
app/templates/partials/: character_card.html  character_form.html  dashboard.html
docs/: runpod-serverless-github.md
runpod_serverless/: __init__.py  main.py
runpod_workers/: __init__.py  common.py  endpoints.py  flash_compat.py
runpod_workers/lora_train/: README.md  __init__.py  core.py  endpoint.py
runpod_workers/nova_generate/: README.md  __init__.py  core.py  endpoint.py
scripts/: docker  flash_local.sh
tests/: test_app.py  test_flash_build.py  test_flash_compat.py  test_runpod_workers.py  test_serverless_handler.py
