[project]
name = "anime-lora-lab"
version = "0.1.0"
description = "Local FastAPI app for anime character dataset generation and LoRA orchestration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]
runpod = [
  "runpod-flash==1.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "runpod_workers*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:httpx.*",
]
